<?xml version="1.0"?>
<package format="3">
  <name>dht22_sensor</name>
  <version>0.1.0</version>
  <description>Lectura de sensor DHT22 usando libgpiod y publicación a ROS 2 (temperatura y humedad).</description>

 <maintainer email="pi@pi.local">pi</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
